fix top navigation height bug on safari

--- a/packages/circuit-ui/components/TopNavigation/TopNavigation.module.css
+++ b/packages/circuit-ui/components/TopNavigation/TopNavigation.module.css
@@ -1,7 +1,9 @@
-.base {
+:root {
   /* content height + border-bottom */
   --top-navigation-height: 57px;
+}
 
+.base {
   display: flex;
   align-items: center;
   justify-content: space-between;
